--- a/SylentByte.html
+++ b/SylentByte.html
@@ -12,7 +12,7 @@
             <h1>SylentByte Company</h1>
             <div class="buttons">
                 <a href="/Manuals.html"><button>Мануалы</button></a>
-                <a href="#"><button>Специалисты</button></a>
+                <a href="/specials.html"><button>Специалисты</button></a>
                 <a href="#"><button>Прайс</button></a>
                 <a href="#"><button>О нас</button></a>
             </div>
