--- a/specials.html
+++ b/specials.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Specials</title>
 </head>
+
 <body>
     <h1>Специалисты команды SylentByte</h1>
     <div>
@@ -16,8 +18,9 @@
         <p>Специалист кибер безопасности</p>
     </div>
     <div>
-        <h2></h2>
-        <p>Специалист кибер безопасности</p>
+        <h2>il061-rgb</h2>
+        <p>Разработчик</p>
     </div>
 </body>
+
 </html>
