полная стилизация сайта с изменением конструкции сайта используя семантические теги

--- a/specials.html
+++ b/specials.html
@@ -5,22 +5,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Specials</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
+<header>
+        <a href="/SylentByte.html"><img src="/accets/sb.png" alt="Логотип SylentByte"></a>
+        <h1>SylentByte Specialists</h1>
+        <nav>
+            <a href="/SylentByte.html"><button>Главная</button></a>
+            <a href="/Manuals.html"><button>Мануалы</button></a>
+            <a href="/price.html"><button>Прайс</button></a>
+            <a href="#"><button>О нас</button></a>
+        </nav>
+    </header>
 
 <body>
-    <h1>Специалисты команды SylentByte</h1>
-    <div>
+    <main>
+    <section>
+        <h1>Наши специалисты</h1>
+        <p>Профессионалы с многолетним опытом в области кибербезопасности</p>
+    </section>
+
+    <section>
+    <article class="card">
         <h2>Frontex</h2>
         <p>Разработчик, пентестер, владелец проекта</p>
-    </div>
-    <div>
+    </article>
+    <article class="card">
         <h2>izzkide</h2>
         <p>Специалист кибер безопасности</p>
-    </div>
-    <div>
+    </article>
+    <article class="card">
         <h2>il061-rgb</h2>
         <p>Разработчик</p>
-    </div>
+    </article>
+    </section>
+    </main>
+    
+    
+    <footer>
+        <nav>
+            <a href="#">SylentByte - Все права защищены</a>
+            <a href="#">Новости</a>
+            <a href="#">Лицензия</a>
+        </nav>
+    </footer>
 </body>
 
 </html>
