Подготовка к новой странице

--- a/Manuals.html
+++ b/Manuals.html
@@ -14,7 +14,7 @@
                 <a href="/Manuals.html"><button>Мануалы</button></a>
                 <a href="/specials.html"><button>Специалисты</button></a>
                 <a href="/price.html"><button>Прайс</button></a>
-                <a href="#"><button>О нас</button></a>
+                <a href="/we.html"><button>О нас</button></a>
             </nav>
     </header>
 
