--- a/specials.html
+++ b/specials.html
@@ -14,7 +14,7 @@
             <a href="/SylentByte.html"><button>Главная</button></a>
             <a href="/Manuals.html"><button>Мануалы</button></a>
             <a href="/price.html"><button>Прайс</button></a>
-            <a href="#"><button>О нас</button></a>
+            <a href="/we.html"><button>О нас</button></a>
         </nav>
     </header>
 
