--- a/we.html
+++ b/we.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,15 @@
     <title>SylentByte</title>
 </head>
 <body>
-    
+    <header>
+           <a href="/SylentByte.html"><img src="/accets/sb.png" alt="Логотип SylentByte"></a>
+            <h1>SylentByte Company</h1>
+            <nav>
+                <a href="/Manuals.html"><button>Мануалы</button></a>
+                <a href="/specials.html"><button>Специалисты</button></a>
+                <a href="/price.html"><button>Прайс</button></a>
+                <a href="/we.html"><button>О нас</button></a>
+            </nav>
+    </header>
 </body>
 </html>
