Создал макет на html

--- a/we.html
+++ b/we.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="we.css">
     <title>SylentByte</title>
 </head>
-<body>
-    <header>
+ <header>
            <a href="/SylentByte.html"><img src="/accets/sb.png" alt="Логотип SylentByte"></a>
             <h1>SylentByte Company</h1>
             <nav>
@@ -17,5 +16,23 @@
                 <a href="/we.html"><button>О нас</button></a>
             </nav>
     </header>
+<body>
+    <main>
+       <section>
+        <h1 class="Zagalovok">Коротко о нас</h1>
+        <article class="FirstPers">
+            <h2>Frontex</h2
+            <p>Fronted-разработчик, кибербезопасник. Создаёт лицевую сторону сайта и так же проверяет на утечку информации из баз данных.</p>
+        </article>
+        <article class="SecondPers">
+            <h2>il061-rgb</h2>
+            <p>Fronted-разработчик, 1С-разработчик. Создаёт лицевую сторону сайта, создаёт бухгалтерский учёт для финансов.</p>
+        </article>
+        <article class="ThirdPers">
+            <h2>izzkide</h2>
+            <p>Кибербезопасник. Проверяет утечку информации.</p>
+        </article>
+       </section>
+    </main>
 </body>
 </html>
