--- a/we.html
+++ b/we.html
@@ -18,20 +18,44 @@
     </header>
 <body>
     <main>
-       <section>
+       <section class="SecFirst">
         <h1 class="Zagalovok">Коротко о нас</h1>
-        <article class="FirstPers">
+        <div class="ThreePers">
+            <article class="FirstPers">
             <h2>Frontex</h2
-            <p>Fronted-разработчик, кибербезопасник. Создаёт лицевую сторону сайта и так же проверяет на утечку информации из баз данных.</p>
+            <p>Fronted-разработчик, кибербезопасник. <br>
+                Создаёт лицевую сторону сайта и так же проверяет <br>
+                на утечку информации из баз данных.</p>
         </article>
         <article class="SecondPers">
             <h2>il061-rgb</h2>
-            <p>Fronted-разработчик, 1С-разработчик. Создаёт лицевую сторону сайта, создаёт бухгалтерский учёт для финансов.</p>
+            <p>Fronted-разработчик, 1С-разработчик. <br>
+                Создаёт лицевую сторону сайта, создаёт <br>
+                бухгалтерский учёт для финансов.</p>
         </article>
         <article class="ThirdPers">
             <h2>izzkide</h2>
-            <p>Кибербезопасник. Проверяет утечку информации.</p>
+            <p>Кибербезопасник. <br>
+                Проверяет утечку информации.</p>
         </article>
+        </div>
+       </section>
+
+       <section class="SecondSec">
+          <h1>О нашей команде</h1>
+          <p>Наша команда — это сплочённая группа высококлассных специалистов, объединяющая экспертизу в области веб-разработки и кибербезопасности. Мы создаём современные, функциональные и, что самое главное, безопасные цифровые продукты для наших клиентов.
+
+Наш ключевой принцип — синергия. Мы не просто выполняем задачи, а комплексно подходим к каждому проекту:
+
+Создание интуитивного интерфейса: Наши frontend-разработчики воплощают ваши идеи в жизнь, создавая удобные, быстрые и визуально привлекательные сайты, с которыми будет приятно работать вашим пользователям.
+
+Разработка backend-логики и финансовых систем: Мы обладаем глубокой экспертизой в области разработки под платформу «1С», что позволяет нам автоматизировать бухгалтерский и финансовый учёт, интегрируя его с веб-решениями для полной цифровизации бизнес-процессов.
+
+Гарантия безопасности: Наши кибербезопасники непрерывно следят за защищённостью проектов. Мы proactively выявляем и устраняем уязвимости, предотвращаем утечки данных из баз данных и обеспечиваем полное соответствие стандартам информационной безопасности.
+
+Таким образом, мы предлагаем не разрозненные услуги, а готовое, безопасное и технологичное решение, которое решает ваши бизнес-задачи и защищает ваши данные.
+
+</p>
        </section>
     </main>
 </body>
