--- a/we.html
+++ b/we.html
@@ -41,8 +41,9 @@
         </div>
        </section>
 
-       <section class="SecondSec">
-          <h1>О нашей команде</h1>
+       <section class="SecSecond">
+        <div class="SecondSec">
+           <h1>О нашей команде</h1>
           <p>Наша команда — это сплочённая группа высококлассных специалистов, объединяющая экспертизу в области веб-разработки и кибербезопасности. Мы создаём современные, функциональные и, что самое главное, безопасные цифровые продукты для наших клиентов.
 
 Наш ключевой принцип — синергия. Мы не просто выполняем задачи, а комплексно подходим к каждому проекту:
@@ -56,6 +57,8 @@
 Таким образом, мы предлагаем не разрозненные услуги, а готовое, безопасное и технологичное решение, которое решает ваши бизнес-задачи и защищает ваши данные.
 
 </p>
+        </div>
+          
        </section>
     </main>
 </body>
