--- a/we.html
+++ b/we.html
@@ -7,13 +7,13 @@
     <title>SylentByte</title>
 </head>
  <header>
-           <a href="/SylentByte.html"><img src="/accets/sb.png" alt="Логотип SylentByte"></a>
+           <a href="SylentByte.html"><img src="accets/sb.png" alt="Логотип SylentByte"></a>
             <h1>SylentByte Company</h1>
             <nav>
-                <a href="/Manuals.html"><button>Мануалы</button></a>
-                <a href="/specials.html"><button>Специалисты</button></a>
-                <a href="/price.html"><button>Прайс</button></a>
-                <a href="/we.html"><button>О нас</button></a>
+                <a href="Manuals.html"><button>Мануалы</button></a>
+                <a href="specials.html"><button>Специалисты</button></a>
+                <a href="price.html"><button>Прайс</button></a>
+                <a href="we.html"><button>О нас</button></a>
             </nav>
     </header>
 <body>
