--- a/SylentByte.html
+++ b/SylentByte.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SylentByte</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-           <a href="/SylentByte.html"><img src="/accets/sb.png" alt="Логотип SylentByte"></a>
+           <a href="SylentByte.html"><img src="accets/sb.png" alt="Логотип SylentByte"></a>
             <h1>SylentByte Company</h1>
             <nav>
-                <a href="/Manuals.html"><button>Мануалы</button></a>
-                <a href="/specials.html"><button>Специалисты</button></a>
-                <a href="/price.html"><button>Прайс</button></a>
-                <a href="/we.html"><button>О нас</button></a>
+                <a href="Manuals.html"><button>Мануалы</button></a>
+                <a href="specials.html"><button>Специалисты</button></a>
+                <a href="price.html"><button>Прайс</button></a>
+                <a href="we.html"><button>О нас</button></a>
             </nav>
     </header>
 
