--- a/specials.html
+++ b/specials.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Specials</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <header>
-        <a href="/SylentByte.html"><img src="/accets/sb.png" alt="Логотип SylentByte"></a>
+        <a href="SylentByte.html"><img src="accets/sb.png" alt="Логотип SylentByte"></a>
         <h1>SylentByte Specialists</h1>
         <nav>
-            <a href="/SylentByte.html"><button>Главная</button></a>
-            <a href="/Manuals.html"><button>Мануалы</button></a>
-            <a href="/price.html"><button>Прайс</button></a>
-            <a href="/we.html"><button>О нас</button></a>
+            <a href="SylentByte.html"><button>Главная</button></a>
+            <a href="Manuals.html"><button>Мануалы</button></a>
+            <a href="price.html"><button>Прайс</button></a>
+            <a href="we.html"><button>О нас</button></a>
         </nav>
     </header>
 
