--- a/price.html
+++ b/price.html
@@ -23,23 +23,80 @@
             <h1>Список предоставляемых услуг</h1>
         </section>
 
-        <main>
-            <article>
-                <h2>Веб-пентест</h2>
-                <p>Этапы проведения услуги</p>
-                <ul>
-                    <li><strong>1. Сбор информации</strong> — определяем технологии, версии и открытые сервисы.</li>
-                    <li><strong>2. Анализ уязвимостей</strong> — автоматизированные сканы (SAST/DAST) и первичная фильтрация.</li>
-                    <li><strong>3. Ручная валидация</strong> — проверяем и приоритизируем найденные проблемы.</li>
-                    <li><strong>4. Проверка авторизации и логики</strong> — тестируем вход, роли, бизнес‑логику (IDOR, RBAC).</li>
-                    <li><strong>5. Проверка по OWASP Top‑10</strong> — XSS, SQLi, CSRF и др.</li>
-                    <li><strong>6. PoC (опция)</strong> — безопасная демонстрация на тестовой среде (по согл.).</li>
-                    <li><strong>7. Отчёт</strong> — executive summary + технический чеклист исправлений.</li>
-                    <li><strong>8. Ретест (опция)</strong> — проверка закрытия уязвимостей.</li>
-                </ul>
-                <span>от 30.000 в зависимости от найденых уязвимостей</span>
-            </article>
-        </main>
+        <div class="products-grid">
+            <div class="product-card">
+                <div class="card-header">
+                    <h2>Веб-пентест</h2>
+                </div>
+                <div class="card-body">
+                    <p>Комплексное тестирование безопасности веб-приложений</p>
+                    <ul>
+                        <li>Сбор информации</li>
+                        <li>Анализ уязвимостей</li>
+                        <li>Ручная валидация</li>
+                        <li>Проверка авторизации</li>
+                        <li>OWASP Top-10</li>
+                    </ul>
+                </div>
+                <div class="card-footer">
+                    <span class="price">от 30.000 ₽</span>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="card-header">
+                    <h2>Frontend разработка</h2>
+                </div>
+                <div class="card-body">
+                    <p>Создание современного пользовательского интерфейса</p>
+                    <ul>
+                        <li>Адаптивный дизайн</li>
+                        <li>Оптимизация производительности</li>
+                        <li>Кроссбраузерная совместимость</li>
+                        <li>Интеграция с API</li>
+                    </ul>
+                </div>
+                <div class="card-footer">
+                    <span class="price">от 25.000 ₽</span>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="card-header">
+                    <h2>1С разработка</h2>
+                </div>
+                <div class="card-body">
+                    <p>Автоматизация бухгалтерского и финансового учёта</p>
+                    <ul>
+                        <li>Настройка конфигураций</li>
+                        <li>Разработка отчётов</li>
+                        <li>Интеграция с веб-системами</li>
+                        <li>Обучение персонала</li>
+                    </ul>
+                </div>
+                <div class="card-footer">
+                    <span class="price">от 40.000 ₽</span>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="card-header">
+                    <h2>Аудит безопасности</h2>
+                </div>
+                <div class="card-body">
+                    <p>Проверка защищённости информационных систем</p>
+                    <ul>
+                        <li>Анализ инфраструктуры</li>
+                        <li>Проверка баз данных</li>
+                        <li>Выявление утечек данных</li>
+                        <li>Рекомендации по улучшению</li>
+                    </ul>
+                </div>
+                <div class="card-footer">
+                    <span class="price">от 35.000 ₽</span>
+                </div>
+            </div>
+        </div>
         
     </main>
     
